--- a/flowlayout/build.gradle
+++ b/flowlayout/build.gradle
@@ -31,13 +31,13 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:24.2.0'
     testCompile 'junit:junit:4.12'
+    provided 'com.android.support:support-annotations:24.2.0'
 }
 
 def siteUrl = 'https://github.com/junhaozhou/android-flow-layout'
 def gitUrl = 'https://github.com/junhaozhou/android-flow-layout.git'
-version = "0.0.1"
+version = "0.0.2"
 group = 'com.littlechoc.flowlayout'
 
 install {
